# Rafael-IoT-SDK

./: .cproject  .gitignore  .gitlab-ci.yml  .project  CMakeLists.txt  README.md  proj_default.conf
CI_Tools/: astyle_opt.txt  auto_build_exclude_list.txt  auto_build_white_list.txt  auto_check_print_white_list.txt
cmake/: compiler_flags.cmake  extension.cmake  rafael_iot_sdk-config.cmake  toolchain.cmake
components/: CMakeLists.txt
components/cpc/: CMakeLists.txt  component.mk
components/cpc/inc/: cpc.h  cpc_api.h  cpc_config.h  cpc_crc.h  cpc_drv.h  cpc_hdlc.h  cpc_secondary_init.h  cpc_system_common.h  cpc_system_secondary.h  cpc_timer.h  cpc_types.h  mem_pool.h  slist.h  status.h
components/libc/: CMakeLists.txt
components/libc/newlibc/: CMakeLists.txt  assert.c  component.mk  stdatomic.c  syscalls.c
components/network/lmac15p4/: component.mk
components/network/rt569_rf/: component.mk
components/network/rt569mp/: component.mk
components/network/ruci/: component.mk
components/network/thread/: openthread_common.mk
components/platform/: CMakeLists.txt
components/platform/hosal/: CMakeLists.txt
components/utility/: CMakeLists.txt
doc/: Coding_Rule.md
examples/helloworld/: CMakeLists.txt  Makefile  genromap  proj.conf  proj_config.mk
examples/helloworld/helloworld/: app.c  component.mk  main.c
examples/helloworld/helloworld/Include/: project_config.h
examples/multi_protocol_rcp/: Makefile  en_zb_ncp  genromap  proj_config.mk  version.mk
make_scripts/: component_wrapper.mk  project.mk  project_common.mk  toolchain.mk
(+426 files in other folders)
